Pinning Fluid Domain properties causes bake error #66277

Closed
opened 2019-06-30 13:26:42 +02:00 by mantissa · 5 comments

System Information
Operating system: Linux-4.19.51_1-x86_64-with-glibc2.9 64 Bits
Graphics card: TITAN X (Pascal)/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.14

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-29 20:58, hash: be060c3990

Short description of error
When pinning the properties of a Fluid Domain, trying to then bake said Fluid Domain causes an error saying "There should be only one domain object".

Exact steps for others to reproduce the error

  • Select Cube and use "Quick Fluid" command to set up a new Fluid Domain
  • Create additional Properties panel and pin the Fluid Domain settings
  • Clicking Bake causes "There should be only one domain object" error

fluid_domain_error.blend

**System Information** Operating system: Linux-4.19.51_1-x86_64-with-glibc2.9 64 Bits Graphics card: TITAN X (Pascal)/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.14 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-29 20:58, hash: `be060c3990` **Short description of error** When pinning the properties of a Fluid Domain, trying to then bake said Fluid Domain causes an error saying "There should be only one domain object". **Exact steps for others to reproduce the error** - Select Cube and use "Quick Fluid" command to set up a new Fluid Domain - Create additional Properties panel and pin the Fluid Domain settings - Clicking Bake causes "There should be only one domain object" error [fluid_domain_error.blend](https://archive.blender.org/developer/F7557150/fluid_domain_error.blend)
Author

Added subscriber: @Mantissa

Added subscriber: @Mantissa
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, doesnt have to be a additional Properties Editor involved here, just pinning the Domain object and selecting a different object is enough to trigger the error...

Checking...

Confirmed, doesnt have to be a additional Properties Editor involved here, just pinning the Domain object and selecting a different object is enough to trigger the error... Checking...

This issue was referenced by bbbb5cad31

This issue was referenced by bbbb5cad319e0e2c853b089cd3e1cbb83b447f67
Philipp Oeser self-assigned this 2019-07-01 15:24:56 +02:00
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66277
No description provided.