Fix T66277: Pinning Fluid Domain properties causes bake error

Reviewers: brecht

Maniphest Tasks: T66277

Differential Revision: https://developer.blender.org/D5161